--- a/index.html
+++ b/index.html
@@ -7,27 +7,25 @@
     </head>
     <body>
         <header>
-
             <section id='blogtitle'>
+                <img src="img/logo.png" alt="logo">
             <section> <p> Delicious</p> <p>THE BEST FOOD BLOG ON THE WEB</p> </section>
-            <section>
-                <img src="img/fb-icon.png" alt="facebook">
-                <img src="img/twit-icon.png" alt="twitter">
-                <img src="img/gp-icon.png" alt="google">
-                <img src="img/insta-icon.png" alt="instagram">
-                <img src="img/flic-icon.png" alt="flick">
-                <img src="img/pint-icon.png" alt="pinterest">
             </section>
-            <section>
-                <img src="img/rss-icon.png" alt="rss">
-                <img src="img/mail-icon.png" alt="mail">
+            <section id='social'>
+                <section>
+                    <img src="img/fb-icon.png" alt="facebook">
+                    <img src="img/twit-icon.png" alt="twitter">
+                    <img src="img/gp-icon.png" alt="google">
+                    <img src="img/insta-icon.png" alt="instagram">
+                    <img src="img/flic-icon.png" alt="flick">
+                    <img src="img/pint-icon.png" alt="pinterest">
+                </section>
+                <section>
+                    <img src="img/rss-icon.png" alt="rss">
+                    <img src="img/mail-icon.png" alt="mail">
+                </section>
             </section>
             <hr class="barHr"/>
-        </section>
-            
-            <section>
-
-            </section>
         </header>
         <main>
             <section>
